<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizApp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/tv_quiz_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prob1_quiz"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tv_radio_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz1_question"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz1_answ1" />


        <RadioButton
            android:id="@+id/radio_LiveData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/quiz1_answ2" />

        <RadioButton
            android:id="@+id/radio_Encapsulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/quiz1_answ3_correct" />

        <RadioButton
            android:id="@+id/radio_GameViewModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/quiz1_answ4" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_checkbox_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz2_question"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_checkbox_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz2_description"
        android:textColor="@color/material_dynamic_secondary50"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz2_answ1_correct" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz2_answ2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz2_answ3_correct" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz2_answ4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_quiz_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submit"
            android:paddingLeft="20dp"
            android:text="@string/btn_submit" />

        <Button
            android:id="@+id/btn_quiz_reset"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:backgroundTint="@color/teal_200"
            android:onClick="reset"
            android:text="@string/btn_reset" />
    </LinearLayout>

</LinearLayout>